--- a/data/FLHook/general.ini
+++ b/data/FLHook/general.ini
@@ -101,9 +101,9 @@ WPort=1920
 EPort=1921
 EWPort=1922
 Key=SomeRandomKey000
-Pass0=ltvjycnhfwbz
+Pass0=test1
 Rights0=superadmin
-Pass1=gimmeuniverse
+Pass1=test2
 Rights1=superadmin
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
