--- a/exe/flhook_plugins/playercntl.ini
+++ b/exe/flhook_plugins/playercntl.ini
@@ -106,8 +106,11 @@ Text = <TRA data="0x40B60008" mask="-1"/><TEXT>Welcome to our server!</TEXT>
 Text = <TRA data="0x40B60008" mask="-1"/><TEXT>This is not clearly RP or PvP server.</TEXT>
 Text = <TRA data="0x40B60008" mask="-1"/><TEXT>This server is for all type of pilots. You may do all what you want - RP, PvP or both.</TEXT>
 Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Type /help for more information</TEXT>
-Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No cheats. No use of special or Admin equpment. No Cyrillic or Server-crashable nicks - there will be instant delete of this type of nicks. No Insults and swearwording. NO CAPSLOCK in system and universe chat.</TEXT>
-Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Violation: Warning Notification ->Bastille->Ban for a Day - Ban for a Week - Ban for a Month - Permanent ban</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No cheats. No use of special or Admin equpment.</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No Cyrillic or Server-crashable nicks - there will be instant delete of this type of nicks.</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No Insults and swearwording. NO CAPSLOCK in system and universe chat.</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: Not to beg (money, beam, etc.). No AD! Only Main Disco, DiscoUK, Faw:OS, 88 Flak and Renaissance are allowed as AD.</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Violation: Warning Notification -> Bastille -> Ban for a Day -> Ban for a Week -> Ban for a Month -> Permanent ban</TEXT>
 Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Admins using different nicks in game. So beware - we are watching you.</TEXT>
 
 [SpecialBanner]
@@ -117,7 +120,14 @@ Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Conquest: System - kill first bas
 Text = <TRA data="0xFF920540" mask="-1"/><TEXT>Don't use F1 or disconnect when interacting with other players.</TEXT>
 
 [StandardBanner]
-Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No cheats. No use of special or Admin equpment. No Cyrillic or Server-crashable nicks - there will be instant delete of this type of nicks. No Insults and swearwording. NO CAPSLOCK in system and universe chat.</TEXT>
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No cheats. No use of special or Admin equpment.</TEXT>
+[StandardBanner]
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No Cyrillic or Server-crashable nicks - there will be instant delete of this type of nicks.</TEXT>
+[StandardBanner]
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: No Insults and swearwording. NO CAPSLOCK in system and universe chat.</TEXT>
+[StandardBanner]
+Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Rules: Not to beg (money, beam, etc.). No AD! Only Main Disco, DiscoUK, Faw:OS, 88 Flak and Renaissance are allowed as AD.</TEXT>
+[StandardBanner]
 Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Violation: Warning Notification ->Bastille->Ban for a Day - Ban for a Week - Ban for a Month - Permanent ban</TEXT>
 
 [StandardBanner]
@@ -126,4 +136,3 @@ Text = <TRA data="0x40B60000" mask="-1"/><TEXT>Admins using different nicks in g
 [StandardBanner]
 Text = <TRA data="0x40B60008" mask="-1"/><TEXT>This is not clearly RP or PvP server.</TEXT>
 Text = <TRA data="0x40B60008" mask="-1"/><TEXT>This server is for all type of pilots. You may do all what you want - RP, PvP or both.</TEXT>
-
