More universal and 4.87 Adaptation
git-svn-id: https://home-i7/svn/dod@13 9f7e7202-32d1-446c-8b4d-199e820742eb

--- a/exe/flshell.ini
+++ b/exe/flshell.ini
@@ -21,7 +21,7 @@ UseSystemChat = yes
 ;		greetings.txt in the folder where FLShell.dll is located
 ;
 ;GreetingsFilename = C:\greetings.txt
-GreetingsFilename = c:\Program Files\Microsoft Games\dod\EXE\greetings.txt
+GreetingsFilename = C:\Program Files\Microsoft Games\Dod\EXE\greetings.txt
 
 
 ;
@@ -34,7 +34,7 @@ GreetingsFilename = c:\Program Files\Microsoft Games\dod\EXE\greetings.txt
 ;		banners.txt in the folder where FLShell.dll is located
 ;
 ;BannersFilename = C:\banners.txt
-BannersFilename = c:\Program Files\Microsoft Games\dod\EXE\banners.txt
+BannersFilename = C:\Program Files\Microsoft Games\Dod\EXE\banners.txt
 
 ;
 ; BannersInterval
@@ -56,7 +56,7 @@ BannersInterval = 15
 ;		MissingNames.txt in the folder where FLShell.dll is located
 ;
 ;MissingNames = MissingNames.txt
-MissingNames = c:\Program Files\Microsoft Games\dod\EXE\MissingNames.txt
+MissingNames = C:\Program Files\Microsoft Games\Dod\EXE\MissingNames.txt
 
 
 ; JumpLocations
@@ -90,7 +90,7 @@ MissingNames = c:\Program Files\Microsoft Games\dod\EXE\MissingNames.txt
 ;		FLShell.hlp in the folder where FLShell.dll is located
 ;
 ;HelpFilename = FLShell.hlp
-HelpFilename = c:\Program Files\Microsoft Games\dod\EXE\FLShell.hlp
+HelpFilename = C:\Program Files\Microsoft Games\Dod\EXE\FLShell.hlp
 
 
 ;
@@ -101,7 +101,7 @@ HelpFilename = c:\Program Files\Microsoft Games\dod\EXE\FLShell.hlp
 ;	Default:
 ;		rename.log in the folder where FLShell.dll is located
 ;
-RenameLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\rename.log
+RenameLogFilename = C:\Program Files\Microsoft Games\Dod\EXE\flhook_Logs\rename.log
 
 ;
 ; TemplateDir
@@ -115,7 +115,7 @@ RenameLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\rename.
 ;		subfolder "Dot" of the folder where FLShell.dll is located
 ;
 ;TemplateDir = Dot
-TemplateDir = c:\Program Files\Microsoft Games\Dod\EXE\flhook_plugins\restart\
+TemplateDir = C:\Program Files\Microsoft Games\Dod\EXE\flhook_plugins\restart\
 
 ;
 ; UserDataDir
@@ -127,7 +127,7 @@ TemplateDir = c:\Program Files\Microsoft Games\Dod\EXE\flhook_plugins\restart\
 ;		subfolder "UserData" of the folder where FLShell.dll is located
 ;
 ;UserDataDir = UserData
-UserDataDir = c:\Program Files\Microsoft Games\Dod\EXE\UserData\
+UserDataDir = C:\Program Files\Microsoft Games\Dod\EXE\UserData\
 
 
 ;
@@ -138,7 +138,7 @@ UserDataDir = c:\Program Files\Microsoft Games\Dod\EXE\UserData\
 ;	Default:
 ;		logins.log in the folder where FLShell.dll is located
 ;
-LoginsLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\logins.log
+LoginsLogFilename = C:\Program Files\Microsoft Games\Dod\EXE\flhook_Logs\logins.log
 
 
 ;
@@ -149,7 +149,7 @@ LoginsLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\logins.
 ;	Default:
 ;		command.log in the folder where FLShell.dll is located
 ;
-CommandLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\command.log
+CommandLogFilename = C:\Program Files\Microsoft Games\Dod\EXE\flhook_Logs\command.log
 
 
 ;
@@ -160,7 +160,7 @@ CommandLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\comman
 ;	Default:
 ;		cheats.log in the folder where FLShell.dll is located
 ;
-CheatsLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhok_Logs\cheats.log
+CheatsLogFilename = C:\Program Files\Microsoft Games\Dod\EXE\flhok_Logs\cheats.log
 
 
 ;
@@ -171,7 +171,7 @@ CheatsLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhok_Logs\cheats.l
 ;	Default:
 ;		frags.log in the folder where FLShell.dll is located
 ;
-FragsLogFilename = c:\Program Files\Microsoft Games\dod\EXE\flhook_Logs\frags.log
+FragsLogFilename = C:\Program Files\Microsoft Games\Dod\EXE\flhook_Logs\frags.log
 
 ;
 ; LogFrags
@@ -266,7 +266,7 @@ EvasionPenalty = 250000000
 ;	Default:
 ;		5
 ;
-SafeLaunchDuration = 5
+SafeLaunchDuration = 20
 
 
 ;======================================================================
@@ -727,7 +727,7 @@ PenaltyMultiplyer = 125 ;pit test
 DockKillInterval = 10
 
 ; If player has no more money move him to this base
-BankruptLandBase = iw09_02_base
+BankruptLandBase = li01_proxy_base
 
 ; You can assign special penalty amount for some ship types
 ; Format:
