--- a/exe/freelancer.ini
+++ b/exe/freelancer.ini
@@ -9,12 +9,6 @@ local_server = rpclocal.dll
 initial_world = InitialWorld.ini	;relative to Data path
 AppGUID = {A690F026-26F0-4e57-ACA0-ECF868E48D21}
 
-[;Display]
-fullscreen = 1
-size = 1024,768
-color_bpp = 32
-depth_bpp = 32
-
 [Startup]
 ;movie_file = movies\MGS_Logo_Final.wmv
 ;movie_file = movies\DA_Logo_Final.wmv
@@ -22,11 +16,9 @@ depth_bpp = 32
 
 [ListServer]
 hostname = localhost                              ;Your local machine
-;;;hostname = FLListServer2.dns.corp.microsoft.com   ;GUN server in Austin
-;;;hostname = 131.107.135.190                        ;GUN server in Redmond
-;;;hostname = fllistserver.zone.msn.com              ;GUN server in Redmond (DNS entry)
-hostname = gun.fllistserver.com                   ;GUN server provided by www.fllistserver.com
-
+;;; Uncomment the following line to use the community provided freelancer list server replacement.
+;;; This line is commented out as this causes game lag for some players
+hostname = gun.fllistserver.com
 port = 2300
 
 [Server]
@@ -41,11 +33,14 @@ DLL = Content.dll, GameSupport, HIGHEST
 ; required to create ships in space
 DLL = Content.dll, SpaceSupport, NORMAL
 DLL = Content.dll, BaseSupport, NORMAL
-
+DLL = Content.dll, StoryLauncher, BELOW_NORMAL ;story/static missions
 DLL = Content.dll, SpacePop, LOWEST ;populator
 DLL = Content.dll, AISandbox, BELOW_NORMAL
 DLL = Content.dll, TestAutomation, BELOW_NORMAL
 DLL = Content.dll, BasePop, LOWEST
+DLL = Content-0C458F.dll, CrashPatch, LOWEST
+DLL = MatchJob.dll
+DLL = FactionScan.dll
 
 [Initial SP DLLs]
 path = ..\dlls\bin
@@ -88,7 +83,6 @@ solar = solar\solararch.ini
 universe = universe\universe.ini
 constants = constants.ini				;constant variables
 fonts = fonts\fonts.ini
-fonts_dir = fonts\files\                 ;directory for in-proc file loading
 rich_fonts = fonts\rich_fonts.ini
 sounds = audio\ambience_sounds.ini                ;sound-effects (NOT music) for exterior map locations, regions, areas and solar objects
 sounds = audio\sounds.ini				;all sfx not falling into some other category
