--- a/exe/flshell.ini
+++ b/exe/flshell.ini
@@ -727,7 +727,7 @@ PenaltyMultiplyer = 125 ;pit test
 DockKillInterval = 10
 
 ; If player has no more money move him to this base
-BankruptLandBase = li01_proxy_base
+BankruptLandBase = iw09_04_base
 
 ; You can assign special penalty amount for some ship types
 ; Format:
