--- a/exe/freelancer.ini
+++ b/exe/freelancer.ini
@@ -38,7 +38,7 @@ DLL = Content.dll, SpacePop, LOWEST ;populator
 DLL = Content.dll, AISandbox, BELOW_NORMAL
 DLL = Content.dll, TestAutomation, BELOW_NORMAL
 DLL = Content.dll, BasePop, LOWEST
-DLL = Content-0C458F.dll, CrashPatch, LOWEST
+; DLL = Content-0C458F.dll, CrashPatch, LOWEST
 DLL = MatchJob.dll
 DLL = FactionScan.dll
 
